--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,29 @@
     --light-sand: #D9C9BA;
     --deep-black: #0D0D0D;
 }
+/* had a bunch of issues and this fixed it */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* here i defined a little thing which aligns things horizontally in a stack structure, meaning first object in the stack will be on the left */
 .hstack {
     display: flex;
     align-items: center; /* Vertically centers the items */
     gap: 5%;
-    width: 98%;
+    width: 100%;
     padding: 1%;
+}
+
+.hstack.header {
+    display: flex;
+    align-items: center; /* Vertically centers the items */
+    gap: 5%;
+    width: 100%;
+    padding: 1%;
+    z-index: 2;
 }
 /* this is the styling for the header text */
 /* #header-text {
@@ -77,3 +93,82 @@ body {
     width: 60%;
 }
 
+
+.homeItem {
+    text-align: center;
+    width: 33%;
+    text-decoration: none;
+    color: var(--deep-black);
+}
+.homeItem img {
+    width: 75%;
+    height: width;
+}
+
+
+#header-photo {
+    width: 100%;
+    z-index: 1;
+}
+
+.image-header {
+    width: 100%;
+}
+
+.header-text { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--light-gray);
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 6rem;
+    text-align: center;
+    margin: 0;
+}
+
+#classes-main {
+    margin-top: 0;
+    z-index: 1;
+}
+ 
+#mission-statement {
+    margin-top: 5;
+    text-align: center;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-bottom: 10%;
+    padding-top: 10%;
+    color: var(--deep-black);
+    font-family: "Nunito Sans", sans-serif;
+}
+
+.section {
+    display: flex;
+    align-items: center; /* Vertically centers the items */
+    gap: 5%;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.section img {
+    width: 33%;
+    height: width;
+}
+.section p {
+    padding: 5%;
+    text-align: left;
+    text-indent: 4%;
+}
+.section h3 {
+    text-align: left;
+    font-size: larger;
+}
+.section.two {
+    padding-top: 10%;
+}
+
+ .section.three {
+    padding-top: 10%;
+    padding-bottom: 10%;
+ }
